# overmatch

./: .gitignore  Cargo.toml  NOTES.md
.agents/: AGENTS.md  CONTEXT.md
.agents/docs/adr/: 0006-static-friction-brush-anchor.md  0007-model-authored-data-via-skein.md  0008-collision-convex-proxies.md  0010-per-variant-data-in-ron.md  0011-required-model-contract-fails-fast.md
.agents/docs/design/: armor-penetration-and-damage.md  rig-ron-sot-and-composability.md
.github/workflows/: ci.yml  release.yml
assets/tiger_1/: tiger_1.blend  tiger_1.glb  tiger_1.tank.ron
assets/tiger_1/backup/pre-restructure-2026-06-29/: tiger_1.blend  tiger_1.glb  tiger_1.tank.ron
scripts/: build-linux.sh  gen-icons.sh
src/: aim.rs  ballistics.rs  camera.rs  damage.rs  debug.rs  driving.rs  hud.rs  lib.rs  main.rs  sandbox.rs  shooting.rs  sight.rs  spec.rs  state.rs  tank.rs  world.rs
