[package]
name = "overmatch"
version = "0.2.1"
edition = "2024"
default-run = "overmatch"

[dependencies]
bevy = { version = "0.19", features = ["debug"] }
avian3d = "0.7"

# Per-variant spec sheets are authored as RON data assets (ADR-0010): plain-text,
# git-diffable, deserialized straight into our components via serde.
serde = { version = "1", features = ["derive"] }
ron = "0.12"

winit = "0.30"
image = { version = "0.25", default-features = false, features = ["png"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Optimized for distribution: strip symbols and shrink code size. These slow
# down compile time (full recompile + LTO), which is fine for release bundles.
[profile.release]
strip = true
lto = "thin"
codegen-units = 1
